Updated CCNA 1 Network Fundamentals files

--- a/Quiz Result Final Page/CCNA 1 Network Fundamentals/CCNA 1 Network Fundamentals.html
+++ b/Quiz Result Final Page/CCNA 1 Network Fundamentals/CCNA 1 Network Fundamentals.html
@@ -45,21 +45,19 @@
 </table>
 &nbsp;
 <h2 style="text-align: left;"><span style="color: #008385;">Performance per Technology</span></h2>
-Note: If you see <strong>%%CATEGORY-xxxx-X%%</strong> below, it means that no questions related to that technology is
-selected.
 <table id="usableVariables" style="width: 90%;">
     <tbody>
         <tr>
             <td style="width: 70%;"><strong>OSI and TCP/IP Models and Protocols</strong></td>
-            <td style="width: 30%;"><strong>%%CATEGORY-PERCENTAGE-1%% (%%CATEGORY-CORRECT-1%% of %%CATEGORY-TOTAL-1%%)</strong></td>
+            <td style="width: 30%;"><strong>%%CATEGORY-PERCENTAGE-1%%% (%%CATEGORY-CORRECT-1%% of %%CATEGORY-TOTAL-1%%)</strong></td>
         </tr>
         <tr>
             <td style="width: 70%;"><strong>Network Topologies, Components, Cabling, and Architecture</strong></td>
-            <td style="width: 30%;"><strong>%%CATEGORY-PERCENTAGE-2%% (%%CATEGORY-CORRECT-2%% of %%CATEGORY-TOTAL-2%%)</strong></td>
+            <td style="width: 30%;"><strong>%%CATEGORY-PERCENTAGE-2%%% (%%CATEGORY-CORRECT-2%% of %%CATEGORY-TOTAL-2%%)</strong></td>
         </tr>
         <tr>
             <td style="width: 70%;"><strong>IPv4 and IPv6 Types and Addressing</strong></td>
-            <td style="width: 30%;"><strong>%%CATEGORY-PERCENTAGE-3%% (%%CATEGORY-CORRECT-3%% of %%CATEGORY-TOTAL-3%%)</strong></td>
+            <td style="width: 30%;"><strong>%%CATEGORY-PERCENTAGE-3%%% (%%CATEGORY-CORRECT-3%% of %%CATEGORY-TOTAL-3%%)</strong></td>
         </tr>
     </tbody>
 </table>
